@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add 'render' facet
+
 1.302120  2017-11-29 18:49:15-08:00 America/Los_Angeles
 
     - No Changes since last trial
